--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -34,6 +34,8 @@ jobs:
       - name: Terraform Init
         working-directory: terraform
         id: init
+        env:
+          TF_VAR_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
         run: >
           terraform init -no-color
           -backend-config bucket=${{ env.BUCKET_NAME }}
@@ -44,6 +46,8 @@ jobs:
       - name: Terraform Apply
         working-directory: terraform
         id: apply
+        env:
+          TF_VAR_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
         run: >
           terraform apply -no-color -compact-warnings -auto-approve
           -var region=${{ env.AWS_REGION }}
